fix lang btn on mobile

--- a/src/scss/ui/dropdown.scss
+++ b/src/scss/ui/dropdown.scss
@@ -4,6 +4,7 @@
 
 .dropdown__btn {
   svg {
+    pointer-events: none;
     transition: transform .5s cubic-bezier(0.16, 1, 0.3, 1);
   }
   &.opened {
