--- a/src/scss/ui/links.scss
+++ b/src/scss/ui/links.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  pointer-events: none;
 }
 
 .js-lines__js-line {
